# pykm2arec

./: CMakeLists.txt  pyproject.toml
config/: ED_pos_200.txt  ED_pos_33.txt  ED_pos_3978_Data.txt  ED_pos_3978_MC.txt  ED_pos_626.txt  ED_pos_71.txt  ED_pos_92.txt  ED_pos_99.txt  ED_pos_all.txt  ED_pos_half.txt  ED_pos_quarter.txt  ED_pos_quarter.txt.all  ED_pos_unit.txt  ED_pos_unit.txt0  ED_pos_ybj.txt  ED_pos_ybj_33.txt  ED_pos_ybj_39.txt  Edge.txt  Edge2.txt  MD_pos_0.txt  MD_pos_10.txt  MD_pos_50.txt  MD_pos_8.txt  MD_pos_80.txt  MD_pos_90.txt  MD_pos_917.txt  MD_pos_all.txt  MD_pos_half.txt  MD_pos_half_real.txt  MD_pos_quarter.txt  MD_pos_unit.txt  MD_pos_unit.txt0  MD_pos_ybj.txt  MD_pos_ybj2.txt  geometry@ybj.txt  km2a_layout.eps  km2a_layoutr0.eps  layout2.eps  range.txt
include/: EOSopen.h  G4KM2A_Geometry.h  G4KM2A_Reconstruction.h  KM2AEvent.h  KM2AEventLinkDef.h  LHCalibration.h  LHEvent.h  LHEventDict.h  LHEventLinkDef.h  LHRecEvent.h  LHRecEventDict.h  LHRecEventLinkDef.h  TimeCorrect.h  rece.h
python/: CMakeLists.txt  KM2AEventSource.hh  KM2AMCEvent.hh  KM2ARecEvent.hh  KM2ARecWriter.hh  KM2AReconstructor.hh  bindings.cc  pyKM2AEvent.hh  test_bindings.py
src/: EOSopen.cc  G4KM2A_Geometry.cc  G4KM2A_Reconstruction.cc  KM2AEvent.cc  LHAASOFit.cc  LHCalibration.cc  LHEvent.cc  LHRecEvent.cc
src/pykm2arec/: __init__.py
test/: KM2AMCTest.root  example.ipynb
