[build-system]
requires = ["scikit-build-core>=0.3.3", "nanobind>=2.7.1", "type_extensions"]
build-backend = "scikit_build_core.build"

[project]
name = "pykm2arec"
version = "0.1.0"
description = "Python bindings for KM2A reconstruction software"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
]

[project.optional-dependencies]
test = ["pytest>=6.0"]

[tool.scikit-build]
build-dir = "build"
wheel.expand-macos-universal-tags = true
build.verbose = true
cmake.build-type = "Release"



[project.urls]
Homepage = "https://github.com/your-org/KM2AMCrec_V3"